package app.dto;

import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import com.fasterxml.jackson.annotation.JsonProperty;
import lombok.Data;
import lombok.Getter;

import java.util.List;
@Getter
@Data
@JsonIgnoreProperties(ignoreUnknown = true)
public class ProductionDTO  {

    @JsonProperty("cast")
    private List<ActorInMovieDTO> cast;

    @JsonProperty("crew")
    private List<CrewInMovieDTO> crew;
}
