package app.entities;

import jakarta.persistence.Entity;
import jakarta.persistence.Id;
import lombok.*;
import jakarta.persistence.*;

import java.time.LocalDate;
import java.util.Set;

@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
@Builder
@ToString(exclude = {"actor", "crew"})
@Entity
public class PersonalInformation {


    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private long id;

    @Column(name ="personal_id", unique = true)
    private long personId;

    @Column(name = "name", length = 1000)
    private String name;

    @Column(name="gender", length = 1000)
    private int gender;

    @Column(name="birthday")
    private LocalDate birthday;

    @Column(name="deathday")
    private LocalDate deathday;

    @Column(name="known_for_department", length = 1000)
    private String knownForDepartment;

    @Column(name="also_known_as",length = 1000)
    private Set<String> knownAs;

    @Column(name="biography",length = 10000)
    private String biography;

    @Column(name="place_of_birth",length = 1000)
    private String birthPlace;

    @Column(name = "popularity")
    private double popularity;

    @OneToOne(mappedBy = "personalInformation")
    private Actor actor;

    @OneToOne(mappedBy = "personalInformation")
    private Crew crew;


}
